# logwayss

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  GIT_PRIMER.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TASKS.md  specification.md  test.sh
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
client-android/: .gitignore  App.tsx  README.md  SPEC.md  app.json  package-lock.json  package.json
client-android/app/: _layout.tsx  index.tsx  profile.tsx  settings.tsx
client-android/app/entry/: [id].tsx
client-android/src/: check-aes.js  test-crypto.js  test-web-crypto.js
client-desktop/: README.md  SPEC.md
core-go/: .gitignore  README.md  SPEC.md  go.mod  go.sum
core-go/core/: core.go  core_test.go  smoke_test.go  types.go
core-js/: .gitignore  README.md  SPEC.md  package-lock.json  package.json  tsconfig.json
core-js/src/: crypto.ts  db-sqlite.ts  db.ts  index.ts  platform-expo.ts  platform-node.ts  platform.ts  types.ts
core-py/: README.md  SPEC.md  pyproject.toml
core-py/src/logwayss_core/: __init__.py  core.py  crypto.py
core-py/tests/: test_crypto.py  test_smoke.py
docs/: version-checker-manifest.example.json
processing-server/: .env.example  README.md  SPEC.md  go.mod  main.go
spec-and-tests/: README.md
spec-and-tests/api/: README.md
spec-and-tests/conformance/: README.md
spec-and-tests/crypto-vectors/: README.md
spec-and-tests/schemas/: README.md  entry.schema.json  profile.schema.json
(+15 files in other folders)
