[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logwayss-core"
version = "0.0.1"
description = "LogWayss core library (Python port)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LogWayss" }]
dependencies = [
  "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/logwayss/logwayss"

[tool.setuptools.packages.find]
where = ["src"]
